<resources>
    <string name="app_name">Shopping</string>
    <string name="IB">Unicuellos</string>
    <string name="Botton4">Email:</string>
    <string name="Botton5">Password:</string>
    <string name="button">L O G I N</string>
    <string name="botton2">R E G I S T R A R S E</string>
    <string name="botton5">R E G I S T R A R</string>
    <string name="botton6">C O N T I N U A R</string>
    <string name="botton7">R E G I S T R A R</string>
    <string name="botton8">C O N T I N U A R</string>
    <string name="etProducto">Nombre del Producto:</string>
    <string name="etReferences">Referencia:</string>
    <string name="etCategory">Categoria:</string>
    <string name="etPrecio">Precio:</string>
    <string name="etDecripcion">Descripción:</string>
    <string name="etName">Nombre Completo:</string>
    <string name="etIdentif">Cedula:</string>
    <string name="etCargo">Cargo:</string>
    <string name="etEmail">textEmail:</string>
    <string name="etDescription">Description</string>
    <string name="button4">Continuar</string>
    <string name="registrar_usuarios">REGISTRAR USUARIOS</string>
    <string name="rol">Rol:</string>
    <string name="email">Email:</string>
    <string name="nombre_completo">Nombre Completo:</string>
    <string name="cedula">Cedula:</string>
    <string name="cargo">Cargo:</string>
    <string name="agregar_productos">AGREGAR PRODUCTOS</string>

</resources>